# WinServerInspection

./: .gitignore  Microsoft AD.docx  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
docker/ssrf_proxy/: squid.conf.template
docs/: dify-chatflow-setup.md  dify-command-library.json
scripts/: build.ps1
src/: main.py
src/dify_win_agent/: __init__.py  config.py  desktop_window.py  elevation.py  executor.py  logging_utils.py  models.py  reports.py  runtime_paths.py  server.py
tests/: __init__.py  test_config.py  test_desktop_window.py  test_elevation.py  test_executor.py  test_logging_utils.py  test_main.py  test_reports.py  test_runtime_paths.py  test_server.py
workflow-yml/: windows-inspection-agent-v1.0.yml  windows-inspection-agent-v1.1.yml  windows-inspection-single-route.yml  windows-inspection-test1.yml  windows-inspection.yml
